# polyline-icp

./: README.md  conftest.py  dev-requirements.in  doc_plots.py  pyproject.toml
etc/data/: ref.npy  test.npy  traj.npy
polyicp/: icp.py  motion.py  polyline.py  polylines.py  utils.py
tests/: helpers.py  test_icp.py  test_motion.py  test_polyline.py
